...
        @Binding var serverURL: String
        @Binding var username: String
        @Binding var password: String

        var body: some View {
            Section {
                TextField("e.g. My Media Server", text: $name)
                    .textContentType(.name)

                TextField("e.g. http://192.168.1.10:8096", text: $serverURL)
                #if os(iOS)
                    .textInputAutocapitalization(.never)
                    .keyboardType(.URL)
...
